# bluepill-cmake-project

./: CMakeLists.txt  Makefile  README.md
include/: gpio.h  led.h  main.h  stm32f1xx.h
lib/gpio/: CMakeLists.txt  gpio.cpp  gpio.hpp
src/: led.cpp  main.cpp  startup_stm32f103c8tx.s
